设置宽度边界值

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,user-scalable=no"
+    />
     <title>Revolute</title>
+    <style>
+      #app {
+        /* px 必须大写 防止被转换成rem */
+        max-width: 768PX;
+      }
+
+      @media (min-width: 768px) {
+        #app {
+          margin: 0 auto;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
